set the repository

--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "test": "mocha ./test"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/purposeindustries/response-json"
+  },
   "author": "Tamas Fodor",
   "license": "ISC",
   "devDependencies": {
