--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "https://github.com/purposeindustries/response-json"
   },
-  "author": "Tamas Fodor",
+  "author": "ruff",
   "license": "ISC",
   "devDependencies": {
     "mocha": "^2.1.0",
